# Mookit-LMS

./: .env.example  .gitignore  README.md  alembic.ini  mookitapi.json  pyproject.toml
.cursor/skills/mookit-ai-assistant/: SKILL.md  reference.md
app/: __init__.py  config.py  main.py
app/api/: announcement.py  chat.py  confirm.py  files.py  health.py  lecture.py  meta.py  quiz.py  sessions.py  taxonomy.py
app/audit/: logger.py
app/auth/: permissions.py
app/contracts/: __init__.py  context.py  errors.py  llm.py  mookit.py  preview.py  stores.py  tools.py  types.py
app/core/: __init__.py  confirmation.py  context.py  executor.py  guardrails.py  hashing.py  memory.py  orchestrator.py  rate_limit.py  reference_resolver.py  security_infra.py  wiring.py
app/core/prompts/: __init__.py  assembly.py  spotlight.py  system.py
app/diagrams/: __init__.py  extractor.py  models.py  pdf_renderer.py  pipeline.py
app/evals/: __init__.py  coverage.py  hallucination.py  injection_redteam.py  quiz_quality.py
app/files/: render.py  sandbox.py
app/llm/: __init__.py  base.py  events.py  openai.py  openai_provider.py  schema.py
app/mookit/: __init__.py  client.py  errors.py  schemas.py
app/obs/: langfuse_context.py  logging.py  openai_client.py  tracing.py
app/preview/: __init__.py  render.py
app/store/: artifact_registry.py  db.py  durable_artifact_registry.py  embeddings.py  in_memory.py  pgvector_rag_store.py  rag_factory.py  rag_store.py  redis_store.py  session_repo.py  session_store.py
app/tools/: __init__.py  announcement.py  ask_user.py  assessment.py  common.py  echo.py  lecture.py  registry.py
app/workers/: arq_app.py
deploy/: Dockerfile  dc.sh  docker-compose.yml  logs.sh  up.sh
deploy/pgadmin/: sample-queries.sql  servers.json
docs/: Requirements Document - mooKIT AI Assistant for Instructors .md  UI_INTEGRATION.md  ai-architecture.md  architecture-deep-dive.md  demo-script.md  details.md  eval-report.md  mooKIT AI Assistant Service - Technical Specification Document.md  production-setup.md  prompt-library.md
docs/plan/: 01-overview.md  02-architecture-and-stack.md  03-subsystems.md  04-modules-and-ux.md  05-shared-contracts.md  06-work-division.md  07-timeline-and-checkpoints.md  08-open-questions-and-risks.md  09-mookit-api-reference.md  10-research-and-references.md  11-instructor-ux-de-hardcode.md  README.md  dev-a-workplan.md  dev-b-execution-plan.md  dev-b-workplan.md  product-ui-and-durable-history.md
migrations/: env.py
migrations/versions/: 0001_initial.py  0002_session_history.py
sample-ui/: index.html
sample-ui/quiz-preview/: ConfirmDialog.tsx  QuizPreview.tsx  README.md  package.json  types.ts
sample-ui/quiz-preview/__tests__/: QuizPreview.test.tsx
scripts/: demo.py  eval_report.py  init_db.py  preview_blueprint.py  probe_mookit.py
tests/: conftest.py  test_cp4_flows.py  test_smoke_wiring.py
tests/api/: test_chat_sse.py  test_lecture_edit.py  test_quiz_edit.py  test_sessions.py  test_taxonomy.py
tests/contracts/: test_contracts.py
tests/core/: scripted_llm.py  test_confirmation_revise_announcement.py  test_confirmation_revise_assessment.py  test_executor_audience.py  test_executor_lecture.py  test_guardrails.py  test_memory.py  test_orchestrator.py  test_orchestrator_guardrails.py  test_orchestrator_references.py  test_prompt_assembly.py  test_reference_resolver.py  test_spotlight.py
tests/evals/: test_coverage.py  test_hallucination.py  test_injection_redteam.py  test_quiz_quality.py
tests/fakes/: confirm_harness.py  fake_mookit.py  fake_rag.py  fake_stores.py  test_confirm_harness.py  test_fake_mookit.py  test_fake_stores.py
tests/files/: test_render.py
tests/fixtures/: injection_doc.txt  sample.pdf.txt
tests/llm/: fake_openai.py  test_openai_provider.py  test_provider_live.py  test_schema.py
tests/mookit/: test_client_url.py
tests/preview/: test_render.py
tests/tools/: test_announcement.py  test_ask_user.py  test_assessment.py  test_common.py  test_echo.py  test_lecture.py  test_registry.py
