[project]
name = "mookit-ai-assistant"
version = "0.1.0"
description = "mooKIT AI Assistant Service"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.60",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "anyio>=4.4",
    "respx>=0.21",
    "httpx>=0.27",
    "ruff>=0.5",
    "mypy>=1.10",
]

[tool.setuptools.packages.find]
include = ["app*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "live: tests that hit the real OpenAI API (require OPENAI_API_KEY); skipped by default",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
namespace_packages = true
explicit_package_bases = true
