[project]
name = "mookit-ai-assistant"
version = "0.1.0"
description = "mooKIT AI Assistant for Instructors — integrated platform (Dev A) + AI brain (Dev B)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Web framework + SSE
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sse-starlette>=3.4",
    "python-multipart>=0.0.9",

    # HTTP client (async, HTTP/2)
    "httpx[http2]>=0.27",

    # LLM / AI
    "openai>=1.35",

    # Settings + validation
    "pydantic>=2.7",
    "pydantic-settings>=2.3",

    # Async database
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",

    # Redis
    "redis[hiredis]>=5.0",

    # Vector search (RAG embeddings in Postgres)
    "pgvector>=0.3",

    # Background jobs
    "arq>=0.26",

    # Resilience
    "tenacity>=8.3",
    "pybreaker>=1.2",

    # Observability
    "langfuse>=2.0",
    "python-json-logger>=2.0",
    "opentelemetry-api>=1.24",
    "opentelemetry-sdk>=1.24",
    "opentelemetry-exporter-otlp-proto-grpc>=1.24",
    "opentelemetry-instrumentation-fastapi>=0.45b0",

    # File extraction (sandboxed subprocess — libraries available in child process)
    "pdfminer.six>=20221105",
    "python-docx>=1.1",
    "python-pptx>=0.6",
    "openpyxl>=3.1",

    # PDF → page-image rendering for vision comprehension (permissively licensed, no system deps)
    "pypdfium2>=4.0",
    "pillow>=10.0",
    # PyMuPDF for diagram extraction pipeline (high-fidelity rendering + graphics detection)
    "pymupdf>=1.24.0",

    # File type validation
    "python-magic>=0.4.27",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "mypy>=1.10",
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "respx>=0.21",          # mock httpx for LLM provider tests
    "httpx>=0.27",
    "pre-commit>=3.7",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.4",
    "mypy>=1.10",
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "httpx>=0.27",
    "pre-commit>=3.7",
    "aiosqlite>=0.22.1",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501", "B008"]  # B008: FastAPI Depends()/File() in defaults is the idiomatic pattern

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "live: tests that hit the real OpenAI API (require OPENAI_API_KEY); skipped by default",
]
